# kaggle-m5

./: .Rprofile  .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  all.do  clean.do  cv4lm-results.R  cv4lm-results.sh  cv4lm.R  docker-compose.yml  record-stats  rpkgs.R  scratch.R  utils.R
cv4lm/: collect-results  cv4lm-results.R  cv4lm.R
data/: calendar.R  cats.R  clean.do  csv2rds.R  dates.R  default.csv.gz.do  default.csv.rds.do  default.extract.rds.do  default.rds.do  depts.R  items.R  ndays_in_mnths.R  ndays_in_years.R  notes  prices.R  sales.R  sales_train_validation.R  sell_prices.R  states.R  stores.R  targets.R
data/src/: arima.R  cats.R  (+11 more)
docs/: EDA Prices.Rmd  EDA-Prices.Rmd  EDA-Prices.html  EDA-Prices.knit.html  EDA-Sales.Rmd  _sales-by.Rmd  _site.yml.do  about.Rmd  clean.do  index.Rmd  index.html  sell_prices.Rmd  site.do  styles.css
script/: build  download  redo  run
telesource/: Cargo.toml  create-dm.R  todo
telesource/src/: cvdb.rs  hypothesis-store.rs  hypothesis.rs  lib.rs
telesource/src/cvdb/: mod.rs
telesource/src/dmatrix-store/: mod.rs
telesource/src/dmatrix_store/: mod.rs
telesource/src/dmatrixptr/: mod.rs
telesource/src/hypothesis/: mod.rs
telesource/src/hypothesis-store/: mod.rs
telesource/src/hypothesis_store/: mod.rs
telesource/src/model-store/: mod.rs
telesource/src/model_store/: mod.rs
xgboost/: collect-feature-date.R  experiments.R  feature-generators.R  fgen  fgen.R  generate-features  main.R  params.R  prepare-feature-generation.R  resultor.Rmd  run-description.txt  runcmp  scratch.R  z_and_c.R
(+20 files in other folders)
