[package]
name = "telesource"
version = "0.1.0"
authors = ["Antony Southworth <southworthy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
xgboost = "0.1.4"
rand = "0.7"
rand_chacha = "0.2"

